lintian-brush (0.4) UNRELEASED; urgency=medium

  * (Build-)Depend at least on a version of python3-breezy that has some
    common Git issues fixed.
  * Add support for fixing useless-autoreconf-build-depends.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Thu, 01 Nov 2018 00:50:34 +0000

lintian-brush (0.3) experimental; urgency=medium

  * Fix entry point for main script.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Tue, 30 Oct 2018 19:58:41 +0000

lintian-brush (0.2) experimental; urgency=medium

  * d/docs: Ship documentation files.
  * d/control: Add .git suffix to Vcs-Git field.
  * lintian-brush: Reduce chattiness when no changes are being made.
  * lintian-brush: Add --verbose option.
  * lintian-brush: Fix running of specific fixers.
  * d/control: Add missing dependency on python3-dulwich. Closes: #912219
  * lintian-brush: Obey git global and per-tree committer settings.
  * lintian-brush: Rather than stripping comments, refuse to edit control
    files where formatting can not be preserved.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Tue, 30 Oct 2018 00:43:15 +0000

lintian-brush (0.1) experimental; urgency=medium

  * Initial release. (Closes: #911016)

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 13 Oct 2018 11:21:39 +0100
