@@ -1,0 +1,2 @@
+Remove obsolete debian/pyversions.
+Fixed-Lintian-Tags: debian-pyversions-is-obsolete
