@@ -1,0 +1,5 @@
+Source: lintian-brush
+
+Package: lintian-brush
+Description: Testing
+ Test test
