@@ -1,4 +1,0 @@
-##!/bin/sh
-# TODO(jelmer): Migrate contents of debian/pyversions to X-Python3-Version: field in debian/control
-rm -f debian/pyversions
-echo "Remove obsolete debian/pyversions."
