@@ -3,6 +3,7 @@ lintian-brush (0.4) UNRELEASED; urgency=medium
   * (Build-)Depend at least on a version of python3-breezy that has some
     common Git issues fixed.
   * Add support for fixing useless-autoreconf-build-depends.
+  * Add support for removing obsolete pyversions files.
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Thu, 01 Nov 2018 00:50:34 +0000
 
